test_suite/tests/derive/panic/no_primary_key.rs
use ensemble::Model;

#[derive(Model)]
struct MyModel {
    name: String,
}

fn main() {}
